test/parser/error/err_09_array_size_missing.pl0
program p; 
var arr[]; 
begin 
end